Fixed background in choice section on mobile layout

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -396,7 +396,7 @@
   .choice {
     padding: 25px 0 33px 0;
     min-height: 390px;
-    background-color: #000;
+    background: #000;
     &_img {
       margin-top: 35px;
     }
